--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
                         </div>
                         <div class="card-body ">
                             <ul class="list-unstyled mt-3 mb-4 ">
-                                <li>TEMP is <span id="temp"></span>°C</li>
+                                <li>Temperature is <span id="temp"></span>°C</li>
                                 <li>Min Temperature is <span id="min_temp"></span>°C</li>
                                 <li>Max Temperature is <span id="max_temp"></span>°C</li>
                             </ul>
