--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,7 @@
                 </ul> -->
     <form class="d-flex" role="search">
         <button class="btn btn-outline-success " type="submit" id="submit"><b>Submit</b></button><input id="city" class="form-control me-2 " type="search " placeholder="Enter city here" aria-label="Search "></form>
+        <button id="theme-toggle">Toggle Dark Mode</button>
     <!-- Optional JavaScript;
         choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
