--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,13 @@
                 </ul> -->
     <form class="d-flex" role="search">
         <button class="btn btn-outline-success " type="submit" id="submit"><b>Submit</b></button><input id="city" class="form-control me-2 " type="search " placeholder="Enter city here" aria-label="Search "></form>
-        <button id="theme-toggle">Dark Mode</button>
+        <div class="toggle-switch">
+  <input type="checkbox" id="toggle" class="checkbox">
+  <label for="toggle" class="label">
+    <div class="switch"></div>
+  </label>
+</div>
+
     <!-- Optional JavaScript;
         choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
